// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test backup google drive 1`] = `"WalletFileBackup"`;

exports[`Test backup google drive 2`] = `
Object {
  "isNewAccount": true,
  "seed": "seed seed",
  "type": 1,
}
`;

exports[`Test seed 1`] = `"SaveSeed"`;

exports[`Test seed 2`] = `
Object {
  "isNewAccount": true,
  "seed": "seed seed",
}
`;

exports[`Test view 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Text
    style={
      Object {
        "color": "#2AB2E2",
        "fontFamily": "Roboto-Regular",
        "fontSize": 25,
        "marginTop": 80,
      }
    }
  >
    backup.title
  </Text>
  <Text
    style={
      Object {
        "color": "#888888",
        "fontFamily": "Roboto-Regular",
        "fontSize": 15,
        "marginTop": 40,
        "width": "90%",
      }
    }
  >
    backup.description
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginTop": 30,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "width": "90%",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderColor": "black",
            "borderRadius": 10,
            "borderWidth": 0.5,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../assets/img/google-drive.png",
            }
          }
          style={
            Array [
              Object {
                "left": 70,
                "position": "absolute",
              },
              Object {
                "height": 30,
                "width": 30,
              },
            ]
          }
        />
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "color": "black",
              },
            ]
          }
        >
          backup.google_drive_title
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 20,
          "width": "90%",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        nativeID="animatedComponent"
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderColor": "black",
            "borderRadius": 10,
            "borderWidth": 0.5,
            "height": 50,
            "justifyContent": "center",
            "opacity": 1,
            "width": "100%",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#888888",
                "fontSize": 27,
              },
              Object {
                "left": 70,
                "position": "absolute",
              },
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          󰆏
        </Text>
        <Text
          style={
            Array [
              Object {
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {
                "color": "black",
              },
            ]
          }
        >
          backup.manually_title
        </Text>
      </View>
    </View>
  </View>
</View>
`;
